# -TCPLS-Android-

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/tcpls_app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.txt
app/src/main/cpp/: buildOpenSSL.sh  buildTCPLS.sh  cmake test.txt
app/src/main/cpp/picotcpls/: CMakeLists.txt
app/src/main/cpp/picotcpls/include/: picotcpls.h
app/src/main/cpp/picotcpls/jni/: jniclient.c  logger.c
app/src/main/cpp/picotcpls/lib/: heap.c  picotcpls.c  picotls.c
app/src/main/cpp/picotcpls/t/: cli.c
app/src/main/java/com/example/tcpls_app/: Alert.java  AppState.java  MainActivity.java  SettingsActivity.java
app/src/main/libs/arm64-v8a/: gdb.setup
app/src/main/libs/armeabi-v7a/: gdb.setup
app/src/main/libs/x86/: gdb.setup
app/src/main/libs/x86_64/: gdb.setup
app/src/main/res/layout/: activity_main.xml  activity_settings.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/tcpls_app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
